# p3-rust-parser

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.rust-workspace  Justfile  README.md  docker-compose.yml
docs/adr/: 0001-distributed-live-system-architecture.md
frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/components/admin/track/: AddSection.svelte  SectionList.svelte  TrackBuilder.svelte  TrackSvg.svelte
frontend/src/lib/components/race/: RaceHeader.svelte  RiderRow.svelte  TimingTower.svelte
frontend/src/lib/stores/: decoder.svelte.ts  race.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/decoder/: +page.svelte
frontend/src/routes/admin/events/: +page.svelte
frontend/src/routes/admin/events/[id]/: +page.svelte
frontend/src/routes/admin/riders/: +page.svelte
frontend/src/routes/admin/tracks/: +page.svelte
frontend/src/routes/admin/tracks/[id]/: +page.svelte
frontend/src/routes/admin/tracks/[id]/onboarding/: +page.svelte
frontend/src/routes/admin/tracks/new/: +page.svelte
frontend/src/routes/race/control/: +page.svelte
frontend/src/routes/race/display/: +page.svelte
frontend/src/routes/race/overlay/: +page.svelte
p3-contracts/: Cargo.toml
p3-contracts/src/: lib.rs
p3-parser/: Cargo.toml
p3-parser/src/: error.rs  frame.rs  lib.rs  messages.rs  stream.rs  tlv.rs
p3-protocol/: Cargo.toml
p3-protocol/src/: crc.rs  error.rs  escape.rs  fields.rs  lib.rs  types.rs
p3-server/: Cargo.toml
p3-server/migrations/: 001_initial_schema.sql  002_track_sections.sql  003_dev_ingest.sql  004_projection_dedupe.sql
p3-server/src/: lib.rs  main.rs
p3-server/src/api/: error.rs  mod.rs  state.rs  ws.rs
p3-server/src/api/routes/: dev_ingest.rs  events.rs  ingest.rs  mod.rs  motos.rs  onboarding.rs  race.rs  riders.rs  seed.rs  tracks.rs
p3-server/src/db/: mod.rs  models.rs
p3-server/src/db/queries/: decoder_live.rs  dev_ingest.rs  events.rs  mod.rs  motos.rs  results.rs  riders.rs  tracks.rs
p3-server/src/decoder/: mod.rs  stream.rs
p3-server/src/domain/: mod.rs  race_event.rs  race_format.rs
p3-server/src/engine/: mod.rs  processor.rs  state.rs
p3-server/src/ingest/: publisher.rs
p3-server/src/workers/: mod.rs  projection.rs  race.rs
p3-test-server/: Cargo.toml
p3-test-server/src/: lib.rs  main.rs
p3-test-server/src/generator/: builder.rs  mod.rs  tlv.rs
p3-test-server/src/simulator/: mod.rs  state.rs
p3-test-server/src/transport/: connection.rs  mod.rs
p3-test-server/tests/: live_capture_tests.rs
p3-track-client/: Cargo.toml
p3-track-client/src/: main.rs
tests/expected/: corrupted_crc.json  minimal_valid.json  multiple_messages.json  partial_message.json  passing_simple.json  passing_weak_signal.json  passing_with_escapes.json  status.json
tests/fixtures/live_capture/: .gitkeep  README.md
