[workspace]
members = [
    "p3-contracts",
    "p3-protocol",
    "p3-test-server",
    "p3-parser",
    "p3-server",
    "p3-track-client",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.5"
crc = "3.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-nats = "0.39"
