[package]
name = "p3-track-client"
version = "0.1.0"
edition = "2024"
authors = ["Eirik Rathe"]
description = "Track-side client that decodes local P3 messages and forwards normalized JSON to a central server"
license = "CC-BY-NC-4.0"

[dependencies]
p3-contracts = { path = "../p3-contracts" }
p3-parser = { path = "../p3-parser" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "p3-track-client"
path = "src/main.rs"
